--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,12 @@
 			<version>${spring.security.version}</version>
 		</dependency>
 		
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-taglibs</artifactId>
+		    <version>${spring.security.version}</version>
+		</dependency>
+		
 		<!-- Hibernate -->
 		<dependency>
 		    <groupId>org.hibernate</groupId>
@@ -120,9 +126,9 @@
 		</dependency>
 		
 	</dependencies>
-	<build>
-		<!-- Ignore web.xml -->
+	<build>		
 		<plugins>
+			<!-- Ignore web.xml -->
 	        <plugin>
 	            <groupId>org.apache.maven.plugins</groupId>
 	            <artifactId>maven-war-plugin</artifactId>
@@ -131,6 +137,19 @@
 	                <failOnMissingWebXml>false</failOnMissingWebXml>
 	            </configuration>
 	        </plugin>
+	        
+	        
+	        <!-- To use java compiler for Maven -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>${jdk.version}</source>
+					<target>${jdk.version}</target>
+				</configuration>
+			</plugin>
+	        
 	    </plugins>
 		<finalName>spring-security-hibernate</finalName>
 	</build>
